<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvToDo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="monospace"
        android:text="@string/todo"
        android:textColor="@color/Text_Color"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183" />

    <TextView
        android:id="@+id/tvQuote"
        android:layout_width="138dp"
        android:layout_height="47dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:alpha="0.6"
        android:text="@string/never_forget_your_next_move"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvToDo" />

    <Button
        android:id="@+id/btnAddWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/Button_Color"
        android:onClick="WorkBtnClicked"
        android:text="@string/let_s_add_some_work"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuote"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnPass"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:onClick="btnPasswords"
        android:text="@string/manager_passwords"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>