<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/custom_listview_bg"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:textColor="#070707"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ibVisibility"
        app:layout_constraintStart_toEndOf="@+id/ivPerson"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPasswordField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUsername"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibCopy"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivKey"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/ibCopy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUsername"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/copy"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_content_copy" />

    <ImageButton
        android:id="@+id/ibVisibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_visibility_off"
        android:contentDescription="@string/visibility" />

    <ImageView
        android:id="@+id/ivPerson"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/userLogo"
        android:paddingTop="5dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_person" />

    <ImageView
        android:id="@+id/ivKey"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/passLogo"
        android:paddingTop="5dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPerson"
        app:srcCompat="@drawable/ic_key" />
</androidx.constraintlayout.widget.ConstraintLayout>